$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 2.1-11 (opened February 5, 2012)

	* adonis, anosim, mantel, mantel.partial, mrpp, permutest.cca: do
	not need clusterEvalQ(parallel, library(vegan)) for socket
	clusters. 
	
Version 2.1-10 (closed February 5, 2012)

	* adonis: print info that terms are added sequentially -- this
	seems to confuse users. Make this change in adonis() instead of
	print.adonis to be prepared to add other policies.

	* adonis, anosim, mantel, mantel.partial, mrpp: implemented
	parallel processing.

	* RsquareAdj: implemented adjusted R2 for partial RDA results.
	The adjusted R2 of model rda(Y ~ X1 + Condition(X2)) is defined so
	that it is the same as component '[a] = X1|X2' in
	varpart(). Removed some dead code from RsquareAdj.cca().

	* varpart: do not scale constraints to unit sd -- this makes
	constant columns (like all zero) into NaN and causes an error in
	simpleRDA2.  Not scaling may help in problems like that reported
	in "[vegan-help][5477] Nested factors in function "varpart"?" by
	Katie Shelef on 26 Jan 2012.

	* use inconsolata fonts in vignettes.

	* added .Rinstignore file to list inst/doc files that should not
	be installed (Makefile, tex, bib, sty). Background: R 2.13.0
	mandated to put vignettes to their specific vignettes/ directory,
	but this is incompatible with R 2.12.* where vegan also should
	work.  The inst/doc directory can still be used (it isnow
	'deprecated'), but system files (such as Makefile) and
	intermediate files (such as tex) are silently copied to the
	installation.  R 2.15.0 (under development) added R CMD check test
	for these extra files.  File .Rinstignore allows maintaining R
	2.12.* compatibility and silences R 2.15.0 tests.
	
Version 2.1-9 (closed January 22, 2012)

	* public launch of parallel processing in vegan. First step was to
	explain the implementation in decision-vegan.Rnw. 

	* DESCRIPTION: vegan suggests 'parallel'. The 'parallel' package