@@ -21,7 +21,7 @@
 \usage{
 nestedchecker(comm)
 nestedn0(comm)
-nesteddisc(comm)
+nesteddisc(comm, niter = 200)
 nestedtemp(comm, ...)
 nestednodf(comm, order = TRUE, weighted = FALSE)
 nestedbetasor(comm)
@@ -31,7 +31,8 @@ nestedbetajac(comm)
 }
 
 \arguments{
-  \item{comm}{Community data. }
+  \item{comm}{Community data.}
+  \item{niter}{Number of iterations to reorder tied columns.}			
   \item{x}{Result object for a \code{plot}.}
   \item{col}{Colour scheme for matrix temperatures.}
   \item{kind}{The kind of plot produced.}
@@ -58,18 +59,17 @@ nestedbetajac(comm)
   which are richer than the most pauperate site species occurs
   (Patterson & Atmar 1986).
 
-  Function \code{nesteddisc} implements
-  discrepancy index which is the number of ones that should be shifted
-  to fill a row with ones in a table arranged by species frequencies
-  (Brualdi & Sanderson 1999). The original definition arranges species
-  (columns) by their frequencies, but did not have any method of
-  handling tied frequencies.
-
-  The \code{nesteddisc} function tries to
-  order tied columns to minimize the discrepancy statistic but this is
-  rather slow, and with a large number of tied columns there is no
-  guarantee that the best ordering was found. In that case a warning
-  of tied columns will be issued.
+  Function \code{nesteddisc} implements discrepancy index which is the
+  number of ones that should be shifted to fill a row with ones in a
+  table arranged by species frequencies (Brualdi & Sanderson
+  1999). The original definition arranges species (columns) by their
+  frequencies, but did not have any method of handling tied
+  frequencies.  The \code{nesteddisc} function tries to order tied
+  columns to minimize the discrepancy statistic but this is rather
+  slow, and with a large number of tied columns there is no guarantee
+  that the best ordering was found (argument \code{niter} gives the
+  maximum number of tried orders). In that case a warning of tied
+  columns will be issued.
 
   Function \code{nestedtemp} finds the matrix temperature which is
   defined as the sum of \dQuote{surprises} in arranged matrix.  In
